[project]
name = "spy-agency"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.2",
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "dotenv>=0.9.9",
    "fastapi>=0.125.0",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.38.0",
]
